# AlgorithmDS

./: CMakeLists.txt  CMakeSettings.json  README.md
Problems/: includes.h  nqueens.h
Searching/: node.h
algorithms/: CMakeLists.txt
algorithms/Searching/: BFS.h  DFS.h
algorithms/sorting/mergesort/: mergesort.cpp  mergesort.hpp
algorithms/sorting/quicksort/: quicksort.cpp  quicksort.hpp
cpp_concept/: function_ptr_example.cpp
lib/: CMakeLists.txt
lib/structures/LinkList/: LinkList.cpp  LinkList.hpp  LinkList_readme.txt  LinkList_temp.cpp  LinkListval.cpp  linklistval
lib/structures/link_list_network/: ConsoleApplication1.cpp  node.cpp  node.h  node_chain.cpp  node_chain.h  node_router.cpp  node_router.h  readme.txt
structures/: LinkList.hpp
